# atm-transaction-sim

./: .gitignore  CMakeLists.txt  README.md  authentication.c  authentication.h  balance.c  balance.h  build  main.c  receipt.c  receipt.h  transfer.c  transfer.h
.github/workflows/: build.yml
